<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/line"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <!--android:layout_height="230dp"-->

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/texts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:gravity="center_vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="кусочек ржаного хлеба и кофе без сахара." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 вареных яйца, вареная капуста с растительным маслом и стакан томатного сока." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supper"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSupper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100г вареной говядины и стакан кефира." />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editWeight" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"/>

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>


    </LinearLayout>

</LinearLayout>


