<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/apples" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="left"
                android:text="@string/_7_days_diet"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:text="Самая короткая из диет этой серии, подходит тем, кто хочет сбросить пару килограмм в немыслимо короткий срок"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/apples" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="left"
                android:text="@string/_9_days_diet"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:text="Немного больше дней и ограничений, подойдет тому, кто хочет добиться, кроме снижения веса, еще и улучшения самочувствия"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/apples" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="left"
                android:text="@string/_13_days_diet"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:text="Подходит тем, кто уверен в себе и не сомневается, что справится со всеми сложностями, поскольку стремится получить основательные изменения"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/apples" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="left"
                android:text="@string/_14_days_diet"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:text="Самая сложная диета, но и самая эффективная в отношении снижения веса"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>